Adds tests to BookControllerTest.java   - refactors BookControllerTest.java for readability   - indentation changes in files   - adds especialized BookNotFoundException for better error handling
